[project]
name = "warehouse-management"
version = "1.0.0"
description = "Clean Code Training Task"
authors = [
    {name = "Dmitriy Vdovichenko",email = "yotskry@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.39,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
sqlalchemy = "^2.0.39"
pytest = "^8.3.5"

[tool.pytest.ini_options]
pythonpath = [
    "."
]

